src/stylus/blocks/_mob-menu.styl
.mob-menu
  position fixed
  bottom 100%
  left 0
  display flex
  flex-direction: column
  width 100%
  height 100vh
  background-color rgba(0,0,0,0.95)
  z-index: 20
  padding 3rem 1.2rem
  transition: .5s
  will-change: bottom
  &__top
    display flex
    justify-content: center
    flex-shrink: 0
    flex-grow: 0
  & .callback
    display none
  &__close
    & svg
      height 32px
  &__menu
    flex-grow: 1
    padding-top 1rem
    display flex
    flex-direction: column
    align-items: center
    justify-content: space-around
  &__item
    font-family: 'Open Sans'
    font-size: 4.2rem
    color #fff

@media (max-width: 719px)
  .mob-menu
    & .callback
      display block
    &__top
      justify-content: space-between
    &__item
      font-size: 2.2rem

